--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 # “publish” is the directory to publish (relative to the root of your repo).
 
 [build]
-  base    = "front-end/"
-  command = "npm run build"
-  publish = "front-end/.next/"
+NODE_ENV = "prod"
+base="front-end/"
+publish="front-end/out/"
+command="npm run export"
