--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sick-fits-frontend",
+  "name": "adventure tracker",
   "version": "1.0.0",
-  "description": "Sick Fits! An example React, GraphQL, Next and Apollo",
+  "description": "Adventure Tracker React, GraphQL, Next and Apollo",
   "main": "index.js",
   "scripts": {
     "dev": "next -p 7777",
