--- a/front-end/package.json
+++ b/front-end/package.json
@@ -35,6 +35,7 @@
     "react": "^16.8.3",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.2.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.3",
     "react-google-maps": "^9.4.5",
     "react-stripe-checkout": "^2.6.3",
