--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.13.6",
     "apollo-boost": "^0.1.16",
     "apollo-client": "^2.4.2",
