--- a/front-end/package.json
+++ b/front-end/package.json
@@ -72,7 +72,8 @@
     "env": {
       "development": {
         "presets": [
-          "next/babel"
+          "next/babel",
+          "@zeit/next-typescript/babel"
         ],
         "plugins": [
           [
