Added typescript preset to production

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -87,7 +87,8 @@
       },
       "production": {
         "presets": [
-          "next/babel"
+          "next/babel",
+          "@zeit/next-typescript/babel"
         ],
         "plugins": [
           [
