--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,7 +22,9 @@
     "apollo-client": "^2.4.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-styled-components": "^1.7.1",
+    "cloudinary-core": "^2.6.2",
     "date-fns": "^2.0.0-alpha.7",
+    "dotenv": "^7.0.0",
     "downshift": "^2.2.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -53,6 +55,7 @@
     "graphql-tools": "^4.0.0",
     "jest": "^23.6.0",
     "jest-transform-graphql": "^2.1.0",
+    "next-compose": "0.0.2",
     "react-testing-library": "^6.0.0"
   },
   "jest": {
