--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/googlemaps": "^3.30.19",
+    "@types/markerclustererplus": "^2.1.33",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.13.6",
