--- a/front-end/package.json
+++ b/front-end/package.json
@@ -35,6 +35,7 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
+    "html2canvas": "^1.0.0-alpha.12",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
     "next": "^7.0.0",
