--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,7 +11,7 @@
     "test": "NODE_ENV=test jest --watch",
     "test-win": "SET NODE_ENV=test&& jest --watch",
     "heroku-postbuild": "next build",
-    "prettier": "prettier \"**/*.+(js|jsx|yml|yaml|ts|tsx|css|md|mdx)\"",
+    "prettier": "prettier \"**/*.+(js|jsx|yml|yaml|ts|tsx|css|md|mdx|less)\"",
     "format": "npm run prettier -- --write",
     "validate": "npm run prettier -- --list-different"
   },
@@ -21,6 +21,7 @@
     "@types/googlemaps": "^3.30.19",
     "@types/markerclustererplus": "^2.1.33",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^3.13.6",
     "apollo-boost": "^0.1.16",
@@ -35,6 +36,7 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
+    "less": "^3.9.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
     "next": "^7.0.0",
